# fullstack-solana

./: .gitignore  Anchor.toml  copyIdl.js  package-lock.json  package.json  recover.json
app/: package-lock.json  package.json
app/src/: App.js  idl.json
programs/fullstack-solana/: Cargo.toml
programs/fullstack-solana/src/: lib.rs
tests/: fullstack-solana.js
